# proj_piercer

./: .env.example  .gitignore  README.md  plan-projectPiercer.prompt.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/piercer-vpn/: SKILL.md
deploy/: piercer-dns.service  piercer.service
piercer/: __init__.py  config.py  dns_server.py  main.py
piercer/core/: __init__.py  clash_parser.py  wg_parser.py
piercer/routers/: __init__.py  clash.py  wg.py
scripts/: reset_server.sh
tests/: __init__.py  test_api.py  test_clash_parser.py  test_wg_parser.py
